[gd_scene load_steps=4 format=3 uid="uid://bjx1itv443jre"]

[ext_resource type="Script" path="res://Scripts/potion_area.gd" id="1_a4jf3"]
[ext_resource type="PackedScene" uid="uid://bnvc66ohoh8v5" path="res://Scenes/component_attack.tscn" id="2_0ahnn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ptyd6"]
radius = 32.0

[node name="PotionArea" type="Node2D"]
script = ExtResource("1_a4jf3")
radius = 32.0

[node name="AttackComponent" parent="." instance=ExtResource("2_0ahnn")]
collision_layer = 16
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackComponent"]
shape = SubResource("CircleShape2D_ptyd6")

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="TickTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
[connection signal="timeout" from="TickTimer" to="." method="_on_tick_timer_timeout"]
